--- a/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Catalogos";
+    ViewBag.Title = "Catálogos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
