--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Países";
+    ViewBag.Title = "País";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
