--- a/ERP/Core.Erp.Web/Areas/General/Views/ProcesosBancariosPorEmpresa/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ProcesosBancariosPorEmpresa/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Procesos bancarios de archivos de transferencias";
+    ViewBag.Title = "Parámetros archivos transferencias";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
