--- a/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Sucursales";
+    ViewBag.Title = "Sucursal";
 
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
