--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Unidades de medida";
+    ViewBag.Title = "Unidad de medida";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
