--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Motivo";
+    ViewBag.Title = "Motivo de inventario";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
