--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
-
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Notas de débitos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -12,7 +12,6 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "NotaCredito", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -97,10 +96,13 @@
                 </button>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <a class="btn btn-primary" href="@Url.Action("Importar","NotaDebito",new { Area = "CuentasPorPagar", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+            </div>
+        </div>
         <div class="box-body">
             @Html.Action("GridViewPartial_nota_debito", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal})
-
-
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
