--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Importar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Facturacion.fa_cliente_Info
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_nota_DebCre_Info
 @{
     ViewBag.Title = "Importar saldos iniciales CxP";
     Layout = "~/Views/Shared/_Layout.cshtml";
