--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -1,8 +1,26 @@
-﻿
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_orden_giro_Info
 <script type="text/javascript">
 
     function fac_con_saldo()
     {        
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSolicitudPago = $("#IdSolicitudPago").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListOrdenesPorPagar", "Deudas", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });        
         GridViewPartial_facturas_con_saldos.PerformCallback();
         $("#fac_con_saldo").modal("show");        
         GridViewPartial_facturas_con_saldos.UnselectRows();
@@ -91,9 +109,14 @@
 
 @using (Html.BeginForm())
 {
-    
+    @Html.HiddenFor(q=>q.IdEmpresa, new { @id = "IdEmpresa"})
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-1">
+                <div class="form-group">
+                    @Html.TextBoxFor(q=>q.IdSolicitudPago, new { @Id= "IdSolicitudPago", @class = "form-control" })
+                </div>
+            </div>
             <div class="col-md-1">
                 <div class="form-group">
                     <button type="button" class="btn btn-primary form-control" onclick="fac_con_saldo()" title="Buscar deudas">
