--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -25,6 +25,7 @@
     });
     var selectedIDs;
     function OnBeginCallback(s, e) {
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
         e.customArgs["selectedIDs"] = selectedIDs;
     }
     function OnSelectionChanged(s, e) {
@@ -54,11 +55,12 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                if (data == "S") {
+                if (data.length == 0) {
                     GridView_cheque_op_x_cruzar.PerformCallback();
                     GridView_cheque_op_x_cruzar.UnselectRows();
                     $("#OpModal").modal("show");
                 } else {
+                    $("#cb_giradoA").val(data);
                     GridView_cheque_op.PerformCallback();
                 }
             },
@@ -326,17 +328,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-1">
-                            <div class="form-group">
-                                @Html.TextBoxFor(q => q.IdSolicitudPago, new { @Id = "IdSolicitudPago", @class = "form-control", @placeholder = "# Solicitud" })
-                            </div>
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            @Html.TextBoxFor(q => q.IdSolicitudPago, new { @Id = "IdSolicitudPago", @class = "form-control", @placeholder = "# Solicitud" })
                         </div>
-                        <div class="col-md-1">
-                            <button type="button" class="btn btn-primary form-control" id="btn_buscar_op" onclick="MostrarModal();" title="Buscar órdenes">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <button type="button" class="btn btn-primary form-control" id="btn_buscar_op" onclick="MostrarModal();" title="Buscar órdenes">
+                            <i class="fa fa-search"></i>
+                        </button>
                     </div>
                 </div>
                 <br />
