--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_005.cshtml
@@ -13,6 +13,6 @@
          settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
          settings.MobileMode = false;
          settings.Name = "webDocumentViewer";
-     }).Bind(Model).GetHtml()
+     }).Bind(ViewBag.Reporte).GetHtml()
 }
 
