--- a/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
@@ -46,6 +46,9 @@
                     @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
                 </div>
+                <div class="alert alert-warning alert-dismissible" id="error_documento">
+                    <i class="icon fa fa-warning"></i><label>Número de documento incorrecto</label>
+                </div>
             </div>
         </div>
     </div>
@@ -210,7 +213,7 @@
 
 <script>
     $(function () {
-
+        $("error_documento").hide();
         $('#pe_fechaNacimiento').datepicker({
             autoclose: true
         })
@@ -259,12 +262,12 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                console.log(data);
                 if (data.isValid == true) {
-                    //$("#pe_Naturaleza")
+                    $("#pe_Naturaleza").val(data.return_naturaleza);
                 }
                 else {
-
+                    $("error_documento").show();
+                    //alert("documento incorrecto");
                 }                                
             },
             error: function (error) {
